ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: eightbitsaxlounge
  labels:
    app: ui
spec:
  selector:
    app: ui
  ports:
  - name: health
    port: 8080
    targetPort: 8080
  - name: metrics
    port: 9090
    targetPort: 9090
  type: ClusterIP
